// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Should handle empty child array and a zero item count 1`] = `""`;

exports[`2. Standard template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`3. Standard template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`4. Standard template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-3"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`5. Standard tracking roles 1`] = `
Array [
  "standard-1",
  "standard-2",
  "standard-3",
]
`;
